fix: smaller font and fix navbar on mobile

--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@ html{
   font-size: 60%;
   overflow-x: hidden;
 }
+
+@media(max-width: 480px) {
+  html{
+    font-size: 50%;
+  }
+}
 body{
   background: var(--bg-color);
   color: var(--text-color);
@@ -610,7 +616,7 @@ span{
     border-bottom-left-radius: 2rem;
     border-left: 2px solid var(--main-color);
     border-bottom: 2px solid var(--main-color);
-    display: none;
+    display: none !important;
     flex-direction: column;
     align-items: flex-start;
   }
@@ -619,7 +625,7 @@ span{
   }
   .navbar a{
     display: block;
-    font-size: 2rem;
+    font-size: 1.6rem;
     margin: 1.5rem 0;
     color: white;
   }
@@ -629,11 +635,11 @@ span{
     gap: 2rem;
   }
   .home-content h3{
-    font-size: 2.6rem;
+    font-size: 2.2rem;
   }
   .home-content h1{
-    font-size: 8rem;
-    margin-top: 4rem;
+    font-size: 6rem;
+    margin-top: 1rem;
   }
   .home-content p{
     max-width: 600px;
